# DFT_DWT_processing

./: 1_framedwt_100.fwt  1_framedwt_100.fwt.mov  6_framedwt_3.fwt  6_framedwt_3.fwt.mov  CMakeCache.txt  CMakeLists.txt  Makefile  README  cmake_install.cmake  task1  task1-DWTprocessor.cpp  task1-DWTprocessor.hpp  task1-blockprocessor.cpp  task1-blockprocessor.hpp  task1-dctprocessor.cpp  task1-dctprocessor.hpp  task1-histogramprocessor.cpp  task1-histogramprocessor.hpp  task1.cpp  task2  task2.cpp  task3  task3.cpp
